--- a/style.css
+++ b/style.css
@@ -8,15 +8,14 @@ font-family: 'Mulish', sans-serif; */
 /* font-family: 'Inter', sans-serif;
 font-family: 'Lato', sans-serif;
 font-family: 'Mulish', sans-serif; */
-
 * {
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
     font-family: 'Mulish', sans-serif;
 }
 
 .container {
-    /* border: 2px solid white; */
+    border: 2px solid red;
     height: auto;
     width: 80%;
     margin: 0 auto;
@@ -26,7 +25,73 @@ font-family: 'Mulish', sans-serif; */
 
 }
 
+/* Nav style */
+.header-nav {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    
+}
+
+.journey-junction {
+    display: flex;
+    
+    
+}
+.journey-junction img{
+    margin-right: 10px;
+}
+.journey-junction h3{
+    color: #131318;
+
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.journey-junction .junction{
+    color: #FF5400;
+}
+
+.header-nav ul {
+    display: flex;
+    
+    
+}
+.header-nav ul li a{
+    text-decoration: none;
+    color: var(--Dark-02, #424247);
+}
+
+.header-nav li {
+    list-style: none;
+    margin-right: 44px;
+    color: var(--Dark-02, #424247);
+
+    font-size: 18px;
+    
+    font-weight: 400;
+
+    
+}
+.header-nav ul .home a{
+    color: #FF5400;
+
+font-size: 18px;
+
+font-weight: 700;
+
+}
+
+.header-nav ul .contact {
+    margin-right: 0;
+}
+
 /* header style */
+
 
 .header-container {
 
@@ -120,9 +185,73 @@ font-family: 'Mulish', sans-serif; */
     font-weight: 700;
     line-height: normal;
     padding: 16px;
+
 }
 
+/* Section One */
+.our-popular-tour-container {
+    display: flex;
+    
+    gap: 50px;
+}
+
+.our-popular-tour h3 {
+    color: #131318;
+
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 24px;
+}
+
+.our-popular-tour p,
+ul {
+    color: rgba(19, 19, 24, 0.70);
+
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+    margin-bottom: 24px;
+}
+
+.our-popular-tour ul li {
+
+    padding-bottom: 10px;
+}
+
+.our-popular-tour-des {
+    color: #5A5A5D;
+}
+
+.btn-read {
+    width: 174px;
+    height: 52px;
+    margin-top: 10px;
+
+}
+
+/* Responsive for mobile */
 @media screen and (max-width: 600px) {
+    .header-nav{
+        flex-direction: column;
+    }
+    .header-nav ul{
+        display: flex;
+        
+        flex-wrap: wrap;
+    }
+    .header-nav ul li{
+        
+        margin-right: 10px;
+        
+    }
+    .header-nav .journey-junction h3{
+        
+        
+    }
     .explore>h2 {
 
         text-align: center;
@@ -138,23 +267,55 @@ font-family: 'Mulish', sans-serif; */
         grid-template-columns: 1fr;
     }
 
+    .our-popular-tour-container {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .our-popular-tours-image img {
+        width: 100%;
+    }
+
+    
+
 }
+
+/* responsive for laptop */
 
 @media screen and (min-width: 992px) and (max-width: 1032px) {
 
-    .container{
-        width: 90%;
-    }
-    .header-form>form>.input {
-        width: 174px;
+    .container {
         
-        flex-shrink: 0;
     }
     
-    .header-form{
+
+    .header-form>form>.input {
+        width: 150px;
+
+        
+    }
+
+    .header-form {
         width: 90%;
     }
-    .btn-primary{
-        width: 174px;
+
+    .btn-primary {
+        width: 150px;
+    }
+
+    /* section one */
+    .our-popular-tour-container {
+        
+    }
+
+    .our-popular-tours-image img {
+
+    }
+    .our-popular-tour{
+        /* border: 2px solid green; */
+    }
+    .our-popular-tours-image{
+        /* border: 2px solid green; */
     }
 }
