--- a/style.css
+++ b/style.css
@@ -233,9 +233,92 @@ ul {
 
 }
 
+/* section five */
+.a-simple{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    gap: 50px;
+}
+.five li{
+    color: #131318;
+
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 26px; /* 162.5% */
+}
+
+.five .watch-our-mountain {
+    
+    color: #FFF;
+
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+display: flex;
+justify-content: center;
+align-items: center;
+background-image: url('./Images/Group\ 40089.png');
+background-repeat: no-repeat;
+background-size: cover;
+}
+.five .watch-our-mountain p{
+    width: 276px;
+    text-align: center;
+}
+
+/* Footer */
+.footer{
+    background: rgba(19, 19, 24, 0.05);
+    text-align: center;
+}
+
+.footer-junction{
+    padding-top: 110px;
+    padding-bottom: 15px;
+    justify-content: center;
+}
+
+.footer-des{
+    color: #5A5A5D;
+
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+ /* 162.5% */
+ width: 60%;
+ margin: 0 auto;
+ margin-bottom: 33px;
+}
+.icon{
+    font-size: 30px;
+    margin-bottom: 50px;
+    
+}
+.icon i{
+    margin-right: 20px;
+}
+.last{
+    color: #131318;
+    font-family: 'Inter', sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+margin-top: 50px;
+padding-bottom: 110px;
+}
+.footer hr{
+    width: 60%;
+    margin: 0 auto;
+    
+}
+
+
 /* Responsive for mobile */
 @media screen and (max-width: 600px) {
-    .header-nav{
+    .header-nav {
         flex-direction: column;
     }
     .header-nav ul{
@@ -267,7 +350,7 @@ ul {
         grid-template-columns: 1fr;
     }
 
-    .our-popular-tour-container {
+    .our-popular-tour-container, .a-simple {
         display: flex;
         flex-direction: column;
 
@@ -277,7 +360,10 @@ ul {
         width: 100%;
     }
 
-    
+    .watch-our-mountain{
+        height: 400px;
+        
+    }
 
 }
 
